# pdx-orm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/db/ORM/: AbstractSchema.py  AbstractTable.py  BaseData.py  Connection.py  ModelMeta.py  QueryBuilder.py  QueryGenerator.py  SubGenerator.py  __init__.py  logger.py  settings.py
src/pdxorm/: AbstractSchema.py  AbstractTable.py  BaseDBOperations.py  BaseData.py  Connection.py  ConnectionHandler.py  DBColumn.py  DBResult.py  DatabaseType.py  ModelMeta.py  OrmEnums.py  QueryBuilder.py  QueryGenerator.py  SqliteConnection.py  SubGenerator.py  __init__.py  logger.py  settings.py  utils.py
src/pdxorm/connections/: AbstractConnection.py  MySqlConnection.py  SqliteConnection.py
src/pdxorm/result_objects/: DBResult.py  MySqlDBResult.py  SqliteDBResult.py
tests/: test_BaseData.py  test_QueryGenerator.py  test_pdxorm.py
